[gd_scene load_steps=5 format=3 uid="uid://b2ujgfric5i4v"]

[ext_resource type="Script" uid="uid://bn4kx6tqrh0ma" path="res://Problem Generator/problem_generator.gd" id="1_wtcfe"]
[ext_resource type="Texture2D" uid="uid://b4kmhojotio0m" path="res://Problem Generator/Common.png" id="2_0hol4"]
[ext_resource type="Texture2D" uid="uid://bu2b0dh701cm" path="res://Problem Generator/Uncommon.png" id="3_q6r6c"]
[ext_resource type="Texture2D" uid="uid://fjnfc5k2bg6" path="res://Problem Generator/Rare.png" id="4_kdubu"]

[node name="Node2D" type="Node2D"]

[node name="MathProblemGenerator" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wtcfe")

[node name="ItemDisplay" type="Label" parent="MathProblemGenerator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 325.0
offset_top = -15.0
offset_right = 689.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Math Problem Generator"

[node name="DifficultyLabel" type="Label" parent="MathProblemGenerator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 438.0
offset_top = 122.0
offset_right = 566.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Difficulty: Common"

[node name="GenerateButton" type="Button" parent="MathProblemGenerator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 498.0
offset_top = 182.0
offset_right = 498.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Generate New Problem"

[node name="ChangeDifficultyButton" type="Button" parent="MathProblemGenerator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_top = 244.0
offset_right = 500.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Change Difficulty"

[node name="SquareShape" type="Sprite2D" parent="MathProblemGenerator"]
position = Vector2(-99, 177)
texture = ExtResource("2_0hol4")

[node name="CircleShape" type="Sprite2D" parent="MathProblemGenerator"]
position = Vector2(-81, 42)
texture = ExtResource("3_q6r6c")

[node name="TriangleShape" type="Sprite2D" parent="MathProblemGenerator"]
position = Vector2(-83, 92)
texture = ExtResource("4_kdubu")

[connection signal="pressed" from="MathProblemGenerator/GenerateButton" to="MathProblemGenerator" method="_on_generate_button_pressed"]
[connection signal="pressed" from="MathProblemGenerator/ChangeDifficultyButton" to="MathProblemGenerator" method="_on_change_difficulty_button_pressed"]
